# youtube-gpt-summarizer

./: .config-template.py  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
